// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ESPHome Compose Build > action-tree-device 1`] = `
"esphome:
  name: action-tree-device
  comment: Action tree compiler test
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: TestWifi
  password: testpass
api:
logger:
  level: INFO
switch:
  id: r_ref0
  platform: gpio
  pin: 12
  name: Test Switch
binary_sensor:
  - platform: gpio
    pin: 13
    name: Simple Toggle
    on_press:
      - switch.toggle: r_ref0
  - platform: gpio
    pin: 14
    name: Sequence Actions
    on_press:
      - switch.toggle: r_ref0
      - delay: 500ms
      - switch.toggle: r_ref0
  - platform: gpio
    pin: 15
    name: Logger
    on_press:
      - logger.log: Button pressed!
"
`;

exports[`ESPHome Compose Build > auto-reactive-device 1`] = `
"esphome:
  name: auto-reactive-device
  comment: Auto-reactive transform demo
  includes:
    - espcompose_bindings.h
  platformio_options:
    build_flags:
      - -DESPCOMPOSE_MAX_NODES=30
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - widgets:
        - label:
            text: !lambda "return id(ha_light_office_state_text).state;"
            x: 10
            y: 10
            id: rw_ref2
        - label:
            text: !lambda "return espcompose::memo_1.get().c_str();"
            x: 10
            y: 40
            id: rw_ref3
        - slider:
            value: !lambda "return espcompose::memo_2.get();"
            x: 10
            y: 70
            width: 200
            id: rw_ref4
        - label:
            text: !lambda "return espcompose::memo_3.get().c_str();"
            x: 10
            y: 100
            id: rw_ref5
        - label:
            text: !lambda "return espcompose::memo_0.get().c_str();"
            x: 10
            y: 130
            id: rw_ref6
binary_sensor:
  platform: homeassistant
  id: ha_light_office
  entity_id: light.office
  trigger_on_initial_state: true
  on_state:
    - lambda: !lambda "espcompose::sig_ha_light_office.set(x); if (auto rt =
        ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
        rt->request_flush(); }"
sensor:
  - platform: homeassistant
    id: ha_light_office_brightness
    entity_id: light.office
    attribute: brightness
    on_value:
      - lambda: !lambda "espcompose::sig_ha_light_office_brightness.set(x); if (auto rt
          = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
  - platform: homeassistant
    id: ha_sensor_temp_inside
    entity_id: sensor.temp_inside
    on_value:
      - lambda: !lambda "espcompose::sig_ha_sensor_temp_inside.set(x); if (auto rt =
          ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
text_sensor:
  - platform: homeassistant
    id: ha_light_office_state_text
    entity_id: light.office
    on_value:
      - lambda: !lambda "espcompose::sig_ha_light_office_state_text.set(x); if (auto rt
          = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
  - platform: homeassistant
    id: ha_sensor_temp_inside_state_text
    entity_id: sensor.temp_inside
    on_value:
      - lambda: !lambda "espcompose::sig_ha_sensor_temp_inside_state_text.set(x); if
          (auto rt = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
external_components:
  - source:
      type: local
      path: ./external_components
    components:
      - espcompose
espcompose:
  flush_budget_us: 2000
"
`;

exports[`ESPHome Compose Build > basic-device 1`] = `
"esphome:
  name: basic-device
  comment: A basic ESPHome device
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
ota:
  platform: esphome
logger:
  level: DEBUG
"
`;

exports[`ESPHome Compose Build > boot-screen-device 1`] = `
"esphome:
  name: boot-screen-device
  comment: Boot screen + page navigation test
  includes:
    - espcompose_bindings.h
  platformio_options:
    build_flags:
      - -DUSE_LVGL_FONT
      - -DESPCOMPOSE_MAX_NODES=25
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: TestWifi
  password: testpass
api:
  on_client_connected:
    - lvgl.page.next:
        animation: FADE_IN
        time: 300ms
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - skip: true
      bg_color: !lambda "return espcompose::thm_333e4663_colors_background.get();"
      bg_opa: COVER
      border_width: 0
      scrollbar_mode: 'OFF'
      id: rw_ref2
      widgets:
        - obj:
            width: 100%
            height: SIZE_CONTENT
            bg_opa: TRANSP
            border_width: 0
            scrollbar_mode: 'OFF'
            layout:
              type: flex
              flex_flow: COLUMN
              flex_align_main: CENTER
            widgets:
              - image:
                  src: r_ref3
              - label:
                  text: Booting...
                  text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                  id: rw_ref4
              - bar:
                  value: 50
                  width: 150
                  height: 10
              - label:
                  text: Waiting for Home Assistant...
                  text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                  id: rw_ref5
    - bg_color: !lambda "return espcompose::thm_333e4663_colors_background.get();"
      bg_opa: COVER
      border_width: 0
      scrollbar_mode: 'OFF'
      id: rw_ref6
      widgets:
        - obj:
            width: 100%
            height: SIZE_CONTENT
            bg_opa: TRANSP
            border_width: 0
            scrollbar_mode: 'OFF'
            layout:
              type: flex
              flex_flow: COLUMN
            widgets:
              - label:
                  text: Connected!
                  text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                  id: rw_ref7
external_components:
  - source:
      type: local
      path: ./external_components
    components:
      - espcompose
espcompose:
  flush_budget_us: 2000
image:
  - id: r_ref3
    file: assets/logo-e5af7788.png
    type: RGB
    resize: 100x100
    transparency: alpha_channel
font:
  - id: r_ref8
    file: gfonts://Roboto
    size: 28
    bpp: 4
  - id: r_ref9
    file: gfonts://Roboto
    size: 20
    bpp: 4
  - id: r_ref10
    file: gfonts://Roboto
    size: 16
    bpp: 4
  - id: r_ref11
    file: gfonts://Roboto
    size: 12
    bpp: 4
  - id: r_ref12
    file: gfonts://Roboto
    size: 14
    bpp: 4
  - id: r_ref13
    file: gfonts://Roboto
    size: 18
    bpp: 4
  - id: r_ref14
    file: gfonts://Roboto
    size: 22
    bpp: 4
"
`;

exports[`ESPHome Compose Build > canvas-device > espcompose_reactive.h 1`] = `
"// espcompose_reactive.h — SolidJS-style fine-grained reactive runtime
#pragma once

#include <functional>
#include <cstdint>
#include <cstring>
#include <limits>
#include <string>

#include "esphome/core/component.h"
#include "esphome/core/hal.h"

#ifndef ESPCOMPOSE_MAX_NODES
#define ESPCOMPOSE_MAX_NODES 64
#endif

// Define ESPCOMPOSE_LOG to enable debug logging (requires esphome/core/log.h).
// Example: add -DESPCOMPOSE_LOG to build_flags in platformio_options.
#ifdef ESPCOMPOSE_LOG
#include "esphome/core/log.h"
static const char *const ESPCOMPOSE_TAG = "espcompose";
#define ESPCOMPOSE_LOGD(fmt, ...) ESP_LOGD(ESPCOMPOSE_TAG, fmt, ##__VA_ARGS__)
#define ESPCOMPOSE_LOGW(fmt, ...) ESP_LOGW(ESPCOMPOSE_TAG, fmt, ##__VA_ARGS__)
#else
#define ESPCOMPOSE_LOGD(...)
#define ESPCOMPOSE_LOGW(...)
#endif

namespace espcompose {

class Scheduler;

class NodeBase {
public:
  NodeBase(uint8_t order) : order_(order) {}
  virtual ~NodeBase() = default;

  void mark_dirty();
  virtual void update() {}

  bool is_dirty() const { return dirty_; }
  void set_dirty(bool d) { dirty_ = d; }

  NodeBase** subscribers() { return subscribers_; }
  uint16_t subscriber_count() const { return subscriber_count_; }

  void set_subscriber_storage(NodeBase** buf, uint16_t capacity) {
    subscribers_ = buf;
    subscriber_capacity_ = capacity;
  }

  void add_subscriber(NodeBase* sub) {
    if (subscribers_ && subscriber_count_ < subscriber_capacity_) {
      subscribers_[subscriber_count_++] = sub;
    } else {
      ESPCOMPOSE_LOGW("subscriber overflow! capacity=%u", (unsigned)subscriber_capacity_);
    }
  }

  void set_sources(NodeBase** sources, uint8_t count) {
    sources_ = sources;
    source_count_ = count;
  }

  uint8_t order() const { return order_; }

private:
  bool dirty_{false};
  uint8_t order_{0};

  NodeBase** subscribers_{nullptr};
  uint16_t subscriber_count_{0};
  uint16_t subscriber_capacity_{0};

  NodeBase** sources_{nullptr};
  uint8_t source_count_{0};
};

class Scheduler {
public:
  using Hook = void(*)();

  static Scheduler& instance() {
    static Scheduler s;
    return s;
  }

  void set_pre_flush(Hook h) { pre_flush_ = h; }
  void set_post_flush(Hook h) { post_flush_ = h; }
  bool has_pending() const { return count_[0] > 0 || count_[1] > 0; }

  void schedule(NodeBase* node) {
    // While flushing, newly dirtied nodes go to the incoming buffer.
    // Otherwise they go to the active buffer for the next flush.
    uint8_t target = flushing_ ? (1 - active_) : active_;
    if (count_[target] >= ESPCOMPOSE_MAX_NODES) return;
    for (uint16_t i = 0; i < count_[target]; ++i) {
      if (buf_[target][i] == node) return;
    }
    buf_[target][count_[target]++] = node;
  }

  bool flush_for_budget_us(uint32_t budget_us) {
    if (count_[active_] == 0) return true;
    if (pre_flush_) pre_flush_();
    flushing_ = true;

    static constexpr int max_passes = 10;
    const uint32_t start_us = esphome::micros();

    for (int pass = 0; pass < max_passes && count_[active_] > 0; ++pass) {
      ESPCOMPOSE_LOGD("flush pass %d, %u nodes queued", pass, count_[active_]);

      // Insertion-sort the active buffer by topological order
      for (uint16_t i = 1; i < count_[active_]; ++i) {
        NodeBase* key = buf_[active_][i];
        int j = static_cast<int>(i) - 1;
        while (j >= 0 && buf_[active_][j]->order() > key->order()) {
          buf_[active_][j + 1] = buf_[active_][j];
          --j;
        }
        buf_[active_][j + 1] = key;
      }

      uint16_t count = count_[active_];
      uint16_t i = 0;
      for (; i < count; ++i) {
        if (esphome::micros() - start_us >= budget_us) {
          break;
        }
        NodeBase* node = buf_[active_][i];
        if (node->is_dirty()) {
          node->update();
          node->set_dirty(false);
        }
      }

      // Budget exhausted: move unprocessed nodes to the incoming buffer.
      if (i < count) {
        uint8_t incoming = 1 - active_;
        for (; i < count; ++i) {
          schedule(buf_[active_][i]);
        }
      }

      // Swap: incoming becomes active, old active is cleared.
      count_[active_] = 0;
      active_ = 1 - active_;
    }

    flushing_ = false;
    if (post_flush_) post_flush_();
    return count_[0] == 0 && count_[1] == 0;
  }

  void flush() {
    (void) flush_for_budget_us(std::numeric_limits<uint32_t>::max());
  }

private:
  Scheduler() = default;
  NodeBase* buf_[2][ESPCOMPOSE_MAX_NODES]{};
  uint16_t count_[2]{0, 0};
  uint8_t active_{0};
  bool flushing_{false};
  Hook pre_flush_{nullptr};
  Hook post_flush_{nullptr};
};

inline void NodeBase::mark_dirty() {
  if (dirty_) return;
  dirty_ = true;
  Scheduler::instance().schedule(this);
  for (uint16_t i = 0; i < subscriber_count_; ++i) {
    subscribers_[i]->mark_dirty();
  }
}

template <typename T>
class Signal : public NodeBase {
public:
  explicit Signal(T initial = T{})
      : NodeBase(0), value_(std::move(initial)) {}

  const T& get() const { return value_; }

  void set(T val) {
    if (value_ != val) {
      ESPCOMPOSE_LOGD("Signal.set() changed, notifying %u subscribers", (unsigned)subscriber_count());
      value_ = std::move(val);
      for (uint16_t i = 0; i < subscriber_count(); ++i) {
        subscribers()[i]->mark_dirty();
      }
    }
  }

private:
  T value_;
};

template <typename T>
class Memo : public NodeBase {
public:
  Memo(std::function<T()> compute, T initial = T{})
      : NodeBase(1),
        compute_(std::move(compute)),
        value_(std::move(initial)) {
    set_dirty(true);
  }

  const T& get() {
    if (is_dirty()) {
      value_ = compute_();
      set_dirty(false);
    }
    return value_;
  }

  void update() override {
    T new_val = compute_();
    if (new_val != value_) {
      ESPCOMPOSE_LOGD("Memo value changed, propagating to %u subs", (unsigned)subscriber_count());
      value_ = std::move(new_val);
      for (uint16_t i = 0; i < subscriber_count(); ++i) {
        subscribers()[i]->mark_dirty();
      }
    }
  }

  void wire(NodeBase** sources, uint8_t count) {
    set_sources(sources, count);
    for (uint8_t i = 0; i < count; ++i) {
      sources[i]->add_subscriber(this);
    }
  }

private:
  std::function<T()> compute_;
  T value_;
};

class Effect : public NodeBase {
public:
  explicit Effect(std::function<void()> callback)
      : NodeBase(255), callback_(std::move(callback)) {
    set_dirty(true);
  }

  void update() override {
    ESPCOMPOSE_LOGD("Effect executing callback");
    callback_();
  }

  void wire(NodeBase** sources, uint8_t count) {
    set_sources(sources, count);
    for (uint8_t i = 0; i < count; ++i) {
      sources[i]->add_subscriber(this);
    }
  }

private:
  std::function<void()> callback_;
};

}  // namespace espcompose
"
`;

exports[`ESPHome Compose Build > canvas-device 1`] = `
"esphome:
  name: canvas-device
  comment: ec-canvas demo
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - widgets:
        - canvas:
            width: 280
            height: 120
            pad_all: 12
            layout:
              type: flex
              flex_flow: COLUMN
            id: ec_ref2
            widgets:
              - label:
                  text: Canvas Card
            bg_opa: 0
            transparent: true
            on_boot:
              - lvgl.canvas.draw_rectangle:
                  id: ec_ref2
                  x: 0
                  y: 0
                  width: 280
                  height: 120
                  bg_color: "0x1a1a2e"
                  radius: 12
              - lvgl.canvas.draw_line:
                  id: ec_ref2
                  points:
                    - x: 16
                      y: 80
                    - x: 264
                      y: 80
                  color: "0x333366"
                  width: 1
        - canvas:
            width: 48
            height: 48
            id: ec_ref3
            bg_opa: 0
            transparent: true
            on_boot:
              - lvgl.canvas.draw_rectangle:
                  id: ec_ref3
                  x: 0
                  y: 0
                  width: 48
                  height: 48
                  bg_color: "0x4caf50"
                  radius: 24
        - obj:
            layout:
              type: flex
              flex_flow: ROW
            widgets:
              - canvas:
                  width: 100
                  height: 60
                  id: ec_ref4
                  widgets:
                    - label:
                        text: Red
                  bg_opa: 0
                  transparent: true
                  on_boot:
                    - lvgl.canvas.draw_rectangle:
                        id: ec_ref4
                        x: 0
                        y: 0
                        width: 100
                        height: 60
                        bg_color: "0xe53935"
                        radius: 8
              - canvas:
                  width: 100
                  height: 60
                  id: ec_ref5
                  widgets:
                    - label:
                        text: Blue
                  bg_opa: 0
                  transparent: true
                  on_boot:
                    - lvgl.canvas.draw_rectangle:
                        id: ec_ref5
                        x: 0
                        y: 0
                        width: 100
                        height: 60
                        bg_color: "0x1e88e5"
                        radius: 8
"
`;

exports[`ESPHome Compose Build > dashboard-device 1`] = `
"esphome:
  name: living-room-dashboard
  friendly_name: Living Room Dashboard
  comment: A custom Home Assistant dashboard.
  min_version: 2026.1.0
esp32:
  variant: ESP32P4
  flash_size: 32MB
  cpu_frequency: 360MHZ
  framework:
    type: esp-idf
    version: latest
    advanced:
      enable_idf_experimental_features: true
esp32_hosted:
  variant: ESP32C6
  reset_pin: 54
  cmd_pin: 19
  clk_pin: 18
  d0_pin: 14
  d1_pin: 15
  d2_pin: 16
  d3_pin: 17
  active_high: true
psram:
  mode: hex
  speed: 200MHz
preferences:
  flash_write_interval: 5min
esp_ldo:
  voltage: 2.5V
  channel: "3"
i2c:
  id: r_ref0
  sda: 7
  scl: 8
  frequency: 400kHz
  scan: true
touchscreen:
  platform: gt911
  i2c_id: r_ref0
  display: r_ref1
  update_interval: 50ms
  transform:
    swap_xy: true
    mirror_x: true
    mirror_y: false
output:
  id: r_ref2
  platform: ledc
  pin: 26
  frequency: 1000Hz
light:
  platform: monochromatic
  output: r_ref2
  name: Display Backlight
  icon: mdi:lightbulb-on
  restore_mode: ALWAYS_ON
  default_transition_length:
    milliseconds: 250
display:
  id: r_ref1
  platform: mipi_dsi
  model: WAVESHARE-P4-NANO-10.1
i2s_audio:
  id: r_ref3
  i2s_mclk_pin: 13
  i2s_lrclk_pin: 10
  i2s_bclk_pin: 12
audio_dac:
  platform: es8311
  i2c_id: r_ref0
  address: 24
audio_adc:
  platform: es7210
  i2c_id: r_ref0
  address: 64
microphone:
  platform: i2s_audio
  i2s_audio_id: r_ref3
  i2s_din_pin: 11
  sample_rate: 16000
  bits_per_sample: 16bit
  adc_type: external
speaker:
  - id: r_ref4
    platform: i2s_audio
    i2s_audio_id: r_ref3
    i2s_dout_pin: 9
    dac_type: external
    channel: mono
    buffer_duration: 100ms
    bits_per_sample: 16bit
    sample_rate: 48000
  - platform: mixer
    output_speaker: r_ref4
    source_speakers:
      - id: r_ref5
        timeout: never
      - id: r_ref6
        timeout: never
  - id: r_ref7
    platform: resampler
    output_speaker: r_ref5
    sample_rate: 48000
    bits_per_sample: 16
  - platform: resampler
    output_speaker: r_ref6
    sample_rate: 48000
    bits_per_sample: 16
rtttl:
  speaker: r_ref7
switch:
  platform: gpio
  pin: 53
  name: Speaker Enable
  icon: mdi:speaker
  entity_category: config
  restore_mode: RESTORE_DEFAULT_ON
wifi:
  networks:
    - ssid: HomeWifi
      password: s3cr3t!!
  power_save_mode: NONE
  fast_connect: true
  ap:
    password: password1234
api:
captive_portal:
web_server:
  port: 80
  version: "3"
ota:
  platform: esphome
logger:
  level: DEBUG
  hardware_uart: UART0
  logs:
    lvgl: INFO
binary_sensor:
  - platform: homeassistant
    name: Kitchen Floods
    entity_id: light.kitchen_floods
    trigger_on_initial_state: true
  - platform: homeassistant
    name: Living Room Light
    entity_id: light.living_room
    trigger_on_initial_state: true
  - platform: homeassistant
    name: Front Door
    entity_id: binary_sensor.front_door_sensor_window_door_is_open
    trigger_on_initial_state: true
  - platform: homeassistant
    name: Back Door
    entity_id: binary_sensor.back_door_sensor_window_door_is_open_2
    trigger_on_initial_state: true
  - platform: homeassistant
    name: Living Room Motion
    entity_id: binary_sensor.living_room_motion_sensor_motion_detection
    trigger_on_initial_state: true
lvgl:
  id: r_ref8
  displays:
    - r_ref1
  rotation: 270
script:
  - id: play_click_sound
    then:
      - logger.log: Click sound disabled for testing
"
`;

exports[`ESPHome Compose Build > design-system-device 1`] = `
"esphome:
  name: design-system-device
  comment: Design system demo
  includes:
    - espcompose_bindings.h
  platformio_options:
    build_flags:
      - -DUSE_LVGL_FONT
      - -DESPCOMPOSE_MAX_NODES=62
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  data_rate: 40MHz
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - bg_color: !lambda "return espcompose::thm_333e4663_colors_background.get();"
      bg_opa: COVER
      border_width: 0
      pad_all: !lambda "return espcompose::thm_333e4663_spacing_lg.get();"
      scrollbar_mode: 'OFF'
      id: rw_ref2
      widgets:
        - obj:
            width: 100%
            height: SIZE_CONTENT
            bg_opa: TRANSP
            border_width: 0
            scrollbar_mode: 'OFF'
            layout:
              type: flex
              flex_flow: COLUMN
            widgets:
              - label:
                  text: Smart Home
                  text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                  id: rw_ref3
              - obj:
                  bg_color: !lambda "return espcompose::thm_333e4663_colors_surfaceAlt.get();"
                  bg_opa: COVER
                  pad_all: !lambda "return espcompose::thm_333e4663_spacing_md.get();"
                  radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                  border_width: 0
                  width: 100%
                  height: SIZE_CONTENT
                  scrollbar_mode: 'OFF'
                  layout:
                    type: flex
                    flex_flow: COLUMN
                  id: rw_ref4
                  widgets:
                    - label:
                        text: Living Room
                        text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                        id: rw_ref5
                    - obj:
                        width: 100%
                        height: SIZE_CONTENT
                        bg_opa: TRANSP
                        border_width: 0
                        scrollbar_mode: 'OFF'
                        layout:
                          type: flex
                          flex_flow: COLUMN
                          pad_row: !lambda "return espcompose::thm_333e4663_spacing_xs.get();"
                        widgets:
                          - label:
                              text: Brightness
                              text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                              id: rw_ref6
                          - obj:
                              width: 100%
                              height: 27
                              pad_top: 4
                              pad_bottom: 4
                              pad_left: 11
                              pad_right: 9
                              widgets:
                                - slider:
                                    min_value: 0
                                    max_value: 255
                                    width: 100%
                                    height: 100%
                                    pad_left: 0
                                    radius: CIRCLE
                                    bg_opa: COVER
                                    bg_color: !lambda "return espcompose::thm_333e4663_parts_slider_rail.get();"
                                    border_width: 0
                                    indicator:
                                      border_width: 0
                                      radius: CIRCLE
                                      bg_opa: COVER
                                      bg_color: !lambda "return
                                        espcompose::thm_333e4663_parts_slider_indicator.get();"
                                    knob:
                                      pad_all: 4
                                      border_width: 2
                                      border_color: !lambda "return espcompose::thm_333e4663_parts_slider_rail.get();"
                                      radius: CIRCLE
                                      bg_opa: COVER
                                      bg_color: !lambda "return espcompose::thm_333e4663_parts_slider_knob.get();"
                                    id: rw_ref7
                    - obj:
                        width: 100%
                        height: SIZE_CONTENT
                        bg_opa: TRANSP
                        border_width: 0
                        scrollbar_mode: 'OFF'
                        layout:
                          type: flex
                          flex_flow: ROW
                          flex_align_main: SPACE_BETWEEN
                          flex_align_cross: CENTER
                          flex_align_track: CENTER
                        widgets:
                          - label:
                              text: Power
                              text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                              id: rw_ref8
                          - switch:
                              width: 50
                              height: 26
                              radius: CIRCLE
                              bg_opa: TRANSP
                              border_width: 0
                              indicator:
                                radius: CIRCLE
                                border_width: 0
                                bg_opa: COVER
                                bg_color: !lambda "return espcompose::thm_333e4663_parts_switch_rail.get();"
                                checked:
                                  bg_color: !lambda "return
                                    espcompose::thm_333e4663_parts_switch_indicator.get();"
                              knob:
                                pad_all: -2
                                radius: CIRCLE
                                bg_opa: COVER
                                bg_color: !lambda "return espcompose::thm_333e4663_parts_switch_knob.get();"
                              id: rw_ref9
              - obj:
                  width: 100%
                  height: SIZE_CONTENT
                  bg_opa: TRANSP
                  border_width: 0
                  scrollbar_mode: 'OFF'
                  layout:
                    type: flex
                    flex_flow: ROW
                    flex_align_main: SPACE_BETWEEN
                  widgets:
                    - button:
                        bg_color: !lambda "return espcompose::thm_333e4663_colors_success_bg.get();"
                        bg_opa: COVER
                        border_color: !lambda "return espcompose::thm_333e4663_colors_success_bg.get();"
                        border_width: 0
                        radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                        width: !lambda "return espcompose::memo_0.get();"
                        height: !lambda "return espcompose::thm_333e4663_sizes_sm_height.get();"
                        pressed:
                          bg_color: !lambda "return
                            espcompose::thm_333e4663_colors_success_bgPressed.get(\\
                            );"
                          bg_opa: COVER
                        id: rw_ref10
                        widgets:
                          - label:
                              text: Turn On
                              text_color: !lambda "return espcompose::thm_333e4663_colors_success_text.get();"
                              text_align: CENTER
                              align: CENTER
                              id: rw_ref11
                    - button:
                        bg_color: !lambda "return espcompose::thm_333e4663_colors_danger_bg.get();"
                        bg_opa: TRANSP
                        border_color: !lambda "return espcompose::thm_333e4663_colors_danger_bg.get();"
                        border_width: 2
                        radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                        width: !lambda "return espcompose::memo_1.get();"
                        height: !lambda "return espcompose::thm_333e4663_sizes_sm_height.get();"
                        pressed:
                          bg_color: !lambda "return espcompose::thm_333e4663_colors_danger_bg.get();"
                          bg_opa: COVER
                        id: rw_ref12
                        widgets:
                          - label:
                              text: Turn Off
                              text_color: !lambda "return espcompose::thm_333e4663_colors_danger_bg.get();"
                              text_align: CENTER
                              align: CENTER
                              id: rw_ref13
external_components:
  - source:
      type: local
      path: ./external_components
    components:
      - espcompose
espcompose:
  flush_budget_us: 2000
font:
  - id: r_ref14
    file: gfonts://Roboto
    size: 28
    bpp: 4
  - id: r_ref15
    file: gfonts://Roboto
    size: 20
    bpp: 4
  - id: r_ref16
    file: gfonts://Roboto
    size: 16
    bpp: 4
  - id: r_ref17
    file: gfonts://Roboto
    size: 12
    bpp: 4
  - id: r_ref18
    file: gfonts://Roboto
    size: 14
    bpp: 4
  - id: r_ref19
    file: gfonts://Roboto
    size: 18
    bpp: 4
  - id: r_ref20
    file: gfonts://Roboto
    size: 22
    bpp: 4
"
`;

exports[`ESPHome Compose Build > device-script-device 1`] = `
"esphome:
  name: device-script-demo
  comment: Device script demo
esp32:
  board: esp32dev
  framework:
    type: arduino
wifi:
  ssid: TestNet
  password: testpass
api:
logger:
binary_sensor:
  platform: gpio
  pin: 4
  name: Button
  on_press:
    - script.execute:
        id: blink
    - script.wait:
        id: blink
  on_release:
    - script.execute:
        id: start_up
    - script.wait:
        id: start_up
script:
  - id: blink
    then:
      - logger.log: Starting blink sequence
      - delay: 1000ms
      - logger.log: Blink done
  - id: start_up
    then:
      - logger.log:
          format: Device booting up
          level: INFO
      - delay: 2000ms
      - logger.log: Boot complete
"
`;

exports[`ESPHome Compose Build > embed-device 1`] = `
"esphome:
  name: embed-demo
  comment: Embed device demo
esp32:
  board: esp32dev
  framework:
    type: arduino
wifi:
  ssid: TestNetwork
  password: test-password
api:
  encryption:
    key: YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXoxMjM0NTY=
ota:
  platform: esphome
logger:
  level: DEBUG
sensor:
  platform: adc
  pin: 36
  name: Analog Reading
  update_interval: 5s
"
`;

exports[`ESPHome Compose Build > fancy-light-cascade-device 1`] = `
"esphome:
  name: fancy-light-cascade-device
  comment: Component cascade E2E
  includes:
    - espcompose_bindings.h
  platformio_options:
    build_flags:
      - -DUSE_LVGL_FONT
      - -DESPCOMPOSE_MAX_NODES=62
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  data_rate: 40MHz
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - bg_color: !lambda "return espcompose::thm_333e4663_colors_background.get();"
      bg_opa: COVER
      border_width: 0
      pad_all: !lambda "return espcompose::thm_333e4663_spacing_lg.get();"
      scrollbar_mode: 'OFF'
      id: rw_ref2
      widgets:
        - obj:
            width: 100%
            height: SIZE_CONTENT
            bg_opa: TRANSP
            border_width: 0
            scrollbar_mode: 'OFF'
            layout:
              type: flex
              flex_flow: COLUMN
            widgets:
              - label:
                  text: !lambda "return espcompose::memo_0.get().c_str();"
                  id: rw_ref3
              - button:
                  on_press:
                    - homeassistant.action:
                        action: homeassistant.toggle
                        data:
                          entity_id: light.kitchen_floods
                  bg_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  bg_opa: COVER
                  border_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  border_width: 0
                  radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                  width: !lambda "return espcompose::memo_2.get();"
                  height: !lambda "return espcompose::thm_333e4663_sizes_md_height.get();"
                  pressed:
                    bg_color: !lambda "return
                      espcompose::thm_333e4663_colors_primary_bgPressed.get();"
                    bg_opa: COVER
                  id: rw_ref4
                  widgets:
                    - label:
                        text: !lambda "return espcompose::memo_1.get().c_str();"
                        text_color: !lambda "return espcompose::thm_333e4663_colors_primary_text.get();"
                        text_align: CENTER
                        align: CENTER
                        id: rw_ref5
              - button:
                  on_press:
                    - homeassistant.action:
                        action: homeassistant.toggle
                        data:
                          entity_id: light.bedroom_lamp
                  bg_color: !lambda "return espcompose::thm_333e4663_colors_secondary_bg.get();"
                  bg_opa: COVER
                  border_color: !lambda "return espcompose::thm_333e4663_colors_secondary_bg.get();"
                  border_width: 0
                  radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                  width: !lambda "return espcompose::memo_4.get();"
                  height: !lambda "return espcompose::thm_333e4663_sizes_md_height.get();"
                  pressed:
                    bg_color: !lambda "return
                      espcompose::thm_333e4663_colors_secondary_bgPressed.get()\\
                      ;"
                    bg_opa: COVER
                  id: rw_ref6
                  widgets:
                    - label:
                        text: !lambda "return espcompose::memo_3.get().c_str();"
                        text_color: !lambda "return
                          espcompose::thm_333e4663_colors_secondary_text.get();"
                        text_align: CENTER
                        align: CENTER
                        id: rw_ref7
              - button:
                  on_press:
                    - lambda: !lambda "espcompose::select_theme_333e4663(\\"light\\");"
                  bg_color: !lambda "return espcompose::thm_333e4663_colors_success_bg.get();"
                  bg_opa: COVER
                  border_color: !lambda "return espcompose::thm_333e4663_colors_success_bg.get();"
                  border_width: 0
                  radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                  width: !lambda "return espcompose::memo_5.get();"
                  height: !lambda "return espcompose::thm_333e4663_sizes_md_height.get();"
                  pressed:
                    bg_color: !lambda "return
                      espcompose::thm_333e4663_colors_success_bgPressed.get();"
                    bg_opa: COVER
                  id: rw_ref8
                  widgets:
                    - label:
                        text: Toggle Theme
                        text_color: !lambda "return espcompose::thm_333e4663_colors_success_text.get();"
                        text_align: CENTER
                        align: CENTER
                        id: rw_ref9
sensor:
  - platform: homeassistant
    id: ha_sensor_living_room_temperature
    entity_id: sensor.living_room_temperature
    on_value:
      - lambda: !lambda "espcompose::sig_ha_sensor_living_room_temperature.set(x); if
          (auto rt = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
  - platform: homeassistant
    id: ha_light_kitchen_floods_brightness
    entity_id: light.kitchen_floods
    attribute: brightness
    on_value:
      - lambda: !lambda "espcompose::sig_ha_light_kitchen_floods_brightness.set(x); if
          (auto rt = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
  - platform: homeassistant
    id: ha_light_bedroom_lamp_brightness
    entity_id: light.bedroom_lamp
    attribute: brightness
    on_value:
      - lambda: !lambda "espcompose::sig_ha_light_bedroom_lamp_brightness.set(x); if
          (auto rt = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
text_sensor:
  - platform: homeassistant
    id: ha_sensor_living_room_temperature_state_text
    entity_id: sensor.living_room_temperature
    on_value:
      - lambda: !lambda "espcompose::sig_ha_sensor_living_room_temperature_state_text.s\\
          et(x); if (auto rt =
          ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
  - platform: homeassistant
    id: ha_light_kitchen_floods_state_text
    entity_id: light.kitchen_floods
    on_value:
      - lambda: !lambda "espcompose::sig_ha_light_kitchen_floods_state_text.set(x); if
          (auto rt = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
  - platform: homeassistant
    id: ha_light_bedroom_lamp_state_text
    entity_id: light.bedroom_lamp
    on_value:
      - lambda: !lambda "espcompose::sig_ha_light_bedroom_lamp_state_text.set(x); if
          (auto rt = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
binary_sensor:
  - platform: homeassistant
    id: ha_light_kitchen_floods
    entity_id: light.kitchen_floods
    trigger_on_initial_state: true
    on_state:
      - lambda: !lambda "espcompose::sig_ha_light_kitchen_floods.set(x); if (auto rt =
          ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
  - platform: homeassistant
    id: ha_light_bedroom_lamp
    entity_id: light.bedroom_lamp
    trigger_on_initial_state: true
    on_state:
      - lambda: !lambda "espcompose::sig_ha_light_bedroom_lamp.set(x); if (auto rt =
          ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
external_components:
  - source:
      type: local
      path: ./external_components
    components:
      - espcompose
espcompose:
  flush_budget_us: 2000
font:
  - id: r_ref10
    file: gfonts://Roboto
    size: 28
    bpp: 4
  - id: r_ref11
    file: gfonts://Roboto
    size: 20
    bpp: 4
  - id: r_ref12
    file: gfonts://Roboto
    size: 16
    bpp: 4
  - id: r_ref13
    file: gfonts://Roboto
    size: 12
    bpp: 4
  - id: r_ref14
    file: gfonts://Roboto
    size: 14
    bpp: 4
  - id: r_ref15
    file: gfonts://Roboto
    size: 18
    bpp: 4
  - id: r_ref16
    file: gfonts://Roboto
    size: 22
    bpp: 4
"
`;

exports[`ESPHome Compose Build > function-component-device 1`] = `
"esphome:
  name: component-device
  comment: Device built from function components
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
ota:
  platform: esphome
logger:
  level: INFO
"
`;

exports[`ESPHome Compose Build > ha-binding-device 1`] = `
"esphome:
  name: ha-binding-device
  comment: HA entity binding demo
  includes:
    - espcompose_bindings.h
  platformio_options:
    build_flags:
      - -DESPCOMPOSE_MAX_NODES=23
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - widgets:
        - label:
            text: !lambda "return id(ha_light_kitchen_floods_state_text).state;"
            x: 10
            y: 10
            id: rw_ref2
        - button:
            on_release:
              - homeassistant.action:
                  action: light.toggle
                  data:
                    entity_id: light.kitchen_floods
            x: 10
            y: 40
            width: 120
            height: 50
            widgets:
              - label:
                  text: Toggle
                  align: CENTER
        - label:
            text: !lambda "return id(ha_sensor_living_room_temperature_state_text).state;"
            x: 10
            y: 100
            id: rw_ref3
binary_sensor:
  platform: homeassistant
  id: ha_light_kitchen_floods
  entity_id: light.kitchen_floods
  trigger_on_initial_state: true
  on_state:
    - lambda: !lambda "espcompose::sig_ha_light_kitchen_floods.set(x); if (auto rt =
        ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
        rt->request_flush(); }"
sensor:
  - platform: homeassistant
    id: ha_light_kitchen_floods_brightness
    entity_id: light.kitchen_floods
    attribute: brightness
    on_value:
      - lambda: !lambda "espcompose::sig_ha_light_kitchen_floods_brightness.set(x); if
          (auto rt = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
  - platform: homeassistant
    id: ha_sensor_living_room_temperature
    entity_id: sensor.living_room_temperature
    on_value:
      - lambda: !lambda "espcompose::sig_ha_sensor_living_room_temperature.set(x); if
          (auto rt = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
text_sensor:
  - platform: homeassistant
    id: ha_light_kitchen_floods_state_text
    entity_id: light.kitchen_floods
    on_value:
      - lambda: !lambda "espcompose::sig_ha_light_kitchen_floods_state_text.set(x); if
          (auto rt = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
  - platform: homeassistant
    id: ha_sensor_living_room_temperature_state_text
    entity_id: sensor.living_room_temperature
    on_value:
      - lambda: !lambda "espcompose::sig_ha_sensor_living_room_temperature_state_text.s\\
          et(x); if (auto rt =
          ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
external_components:
  - source:
      type: local
      path: ./external_components
    components:
      - espcompose
espcompose:
  flush_budget_us: 2000
"
`;

exports[`ESPHome Compose Build > ha-dynamic-device 1`] = `
"esphome:
  name: ha-dynamic-device
  comment: Dynamic HA entity binding demo
  includes:
    - espcompose_bindings.h
  platformio_options:
    build_flags:
      - -DESPCOMPOSE_MAX_NODES=20
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - widgets:
        - label:
            text: !lambda "return id(ha_light_office_main_state_text).state;"
            x: 10
            y: 10
            id: rw_ref2
        - button:
            on_release:
              - homeassistant.action:
                  action: homeassistant.toggle
                  data:
                    entity_id: light.office_main
            x: 10
            y: 40
            width: 120
            height: 50
            widgets:
              - label:
                  text: Office
                  align: CENTER
binary_sensor:
  platform: homeassistant
  id: ha_light_office_main
  entity_id: light.office_main
  trigger_on_initial_state: true
  on_state:
    - lambda: !lambda "espcompose::sig_ha_light_office_main.set(x); if (auto rt =
        ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
        rt->request_flush(); }"
sensor:
  platform: homeassistant
  id: ha_light_office_main_brightness
  entity_id: light.office_main
  attribute: brightness
  on_value:
    - lambda: !lambda "espcompose::sig_ha_light_office_main_brightness.set(x); if
        (auto rt = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
        rt->request_flush(); }"
text_sensor:
  platform: homeassistant
  id: ha_light_office_main_state_text
  entity_id: light.office_main
  on_value:
    - lambda: !lambda "espcompose::sig_ha_light_office_main_state_text.set(x); if
        (auto rt = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
        rt->request_flush(); }"
external_components:
  - source:
      type: local
      path: ./external_components
    components:
      - espcompose
espcompose:
  flush_budget_us: 2000
"
`;

exports[`ESPHome Compose Build > image-font-device 1`] = `
"esphome:
  name: image-font-device
  comment: useImage/useFont hook demo
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - widgets:
        - image:
            src: r_ref2
            x: 10
            y: 10
        - image:
            src: r_ref2
            x: 50
            y: 10
        - image:
            src: r_ref3
            x: 90
            y: 10
        - label:
            text: Small
            x: 10
            y: 60
            text_font: r_ref4
        - label:
            text: Also small
            x: 10
            y: 90
            text_font: r_ref4
        - label:
            text: Large
            x: 10
            y: 120
            text_font: r_ref5
image:
  - id: r_ref2
    file: assets/icon-5e4d533f.png
    type: RGB
    resize: 32x32
    transparency: alpha_channel
  - id: r_ref3
    file: assets/icon-5e4d533f.png
    type: BINARY
font:
  - id: r_ref4
    file: gfonts://Roboto
    size: 20
  - id: r_ref5
    file: gfonts://Roboto
    size: 32
"
`;

exports[`ESPHome Compose Build > library-contract-device (consumes compiled library) 1`] = `
"esphome:
  name: library-contract-device
  comment: Compiled library consumption test
  includes:
    - espcompose_bindings.h
  platformio_options:
    build_flags:
      - -DESPCOMPOSE_MAX_NODES=20
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
text_sensor:
  - platform: template
    name: Light Status
    id: light_status
  - platform: homeassistant
    id: ha_light_office_state_text
    entity_id: light.office
    on_value:
      - lambda: !lambda "espcompose::sig_ha_light_office_state_text.set(x); if (auto rt
          = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
binary_sensor:
  platform: homeassistant
  id: ha_light_office
  entity_id: light.office
  trigger_on_initial_state: true
  on_state:
    - lambda: !lambda "espcompose::sig_ha_light_office.set(x); if (auto rt =
        ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
        rt->request_flush(); }"
sensor:
  platform: homeassistant
  id: ha_light_office_brightness
  entity_id: light.office
  attribute: brightness
  on_value:
    - lambda: !lambda "espcompose::sig_ha_light_office_brightness.set(x); if (auto rt
        = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
        rt->request_flush(); }"
external_components:
  - source:
      type: local
      path: ./external_components
    components:
      - espcompose
espcompose:
  flush_budget_us: 2000
"
`;

exports[`ESPHome Compose Build > lvgl-device 1`] = `
"esphome:
  name: lvgl-device
  comment: LVGL single-page button demo
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  data_rate: 40MHz
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - widgets:
        - button:
            x: 10
            y: 10
            width: 120
            height: 50
            widgets:
              - label:
                  text: Click me
                  align: CENTER
"
`;

exports[`ESPHome Compose Build > lvgl-widget-ref-device 1`] = `
"esphome:
  name: lvgl-widget-ref-device
  comment: Typed LVGL widget refs
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: TestWifi
  password: testpass
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - widgets:
        - slider:
            id: r_ref2
            min_value: 0
            max_value: 255
            on_press:
              - lvgl.widget.update:
                  id: r_ref2
                  knob:
                    pad_all: 8
            on_release:
              - lvgl.widget.update:
                  id: r_ref2
                  knob:
                    pad_all: 4
        - button:
            id: r_ref3
            on_click:
              - lvgl.widget.redraw: r_ref3
"
`;

exports[`ESPHome Compose Build > multi-source-reactive-device 1`] = `
"esphome:
  name: multi-source-reactive-device
  comment: Multi-source reactive runtime demo
  includes:
    - espcompose_bindings.h
  platformio_options:
    build_flags:
      - -DESPCOMPOSE_MAX_NODES=23
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - widgets:
        - label:
            text: !lambda "return espcompose::memo_0.get().c_str();"
            x: 10
            y: 10
            id: rw_ref2
binary_sensor:
  platform: homeassistant
  id: ha_light_kitchen_floods
  entity_id: light.kitchen_floods
  trigger_on_initial_state: true
  on_state:
    - lambda: !lambda "espcompose::sig_ha_light_kitchen_floods.set(x); if (auto rt =
        ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
        rt->request_flush(); }"
sensor:
  - platform: homeassistant
    id: ha_light_kitchen_floods_brightness
    entity_id: light.kitchen_floods
    attribute: brightness
    on_value:
      - lambda: !lambda "espcompose::sig_ha_light_kitchen_floods_brightness.set(x); if
          (auto rt = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
  - platform: homeassistant
    id: ha_sensor_temp_inside
    entity_id: sensor.temp_inside
    on_value:
      - lambda: !lambda "espcompose::sig_ha_sensor_temp_inside.set(x); if (auto rt =
          ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
text_sensor:
  - platform: homeassistant
    id: ha_light_kitchen_floods_state_text
    entity_id: light.kitchen_floods
    on_value:
      - lambda: !lambda "espcompose::sig_ha_light_kitchen_floods_state_text.set(x); if
          (auto rt = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
  - platform: homeassistant
    id: ha_sensor_temp_inside_state_text
    entity_id: sensor.temp_inside
    on_value:
      - lambda: !lambda "espcompose::sig_ha_sensor_temp_inside_state_text.set(x); if
          (auto rt = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
          rt->request_flush(); }"
external_components:
  - source:
      type: local
      path: ./external_components
    components:
      - espcompose
espcompose:
  flush_budget_us: 2000
"
`;

exports[`ESPHome Compose Build > project-device 1`] = `
"esphome:
  name: project-demo
  comment: Project structure demo
esp32:
  board: esp32dev
  framework:
    type: arduino
wifi:
  ssid: TestNet
  password: testpass
api:
ota:
  platform: esphome
logger:
  level: DEBUG
sensor:
  - platform: adc
    pin: 32
    name: ADC Sensor 1
    update_interval: 10s
  - platform: adc
    pin: 33
    name: ADC Sensor 2
    update_interval: 10s
"
`;

exports[`ESPHome Compose Build > prop-ref-action-device 1`] = `
"esphome:
  name: prop-ref-action-device
  comment: Ref action through props test
  includes:
    - espcompose_bindings.h
  platformio_options:
    build_flags:
      - -DUSE_LVGL_FONT
      - -DESPCOMPOSE_MAX_NODES=38
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: TestWifi
  password: testpass
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - id: r_ref2
      bg_color: !lambda "return espcompose::thm_333e4663_colors_background.get();"
      bg_opa: COVER
      border_width: 0
      scrollbar_mode: 'OFF'
      widgets:
        - obj:
            width: 100%
            height: SIZE_CONTENT
            bg_opa: TRANSP
            border_width: 0
            scrollbar_mode: 'OFF'
            layout:
              type: flex
              flex_flow: COLUMN
            widgets:
              - label:
                  text: Page 1
                  text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                  id: rw_ref3
              - button:
                  on_press:
                    - lvgl.page.next: {}
                  bg_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  bg_opa: COVER
                  border_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  border_width: 0
                  radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                  width: !lambda "return espcompose::memo_0.get();"
                  height: !lambda "return espcompose::thm_333e4663_sizes_md_height.get();"
                  pressed:
                    bg_color: !lambda "return
                      espcompose::thm_333e4663_colors_primary_bgPressed.get();"
                    bg_opa: COVER
                  id: rw_ref4
                  widgets:
                    - label:
                        text: Next
                        text_color: !lambda "return espcompose::thm_333e4663_colors_primary_text.get();"
                        text_align: CENTER
                        align: CENTER
                        id: rw_ref5
    - bg_color: !lambda "return espcompose::thm_333e4663_colors_background.get();"
      bg_opa: COVER
      border_width: 0
      scrollbar_mode: 'OFF'
      id: rw_ref6
      widgets:
        - obj:
            width: 100%
            height: SIZE_CONTENT
            bg_opa: TRANSP
            border_width: 0
            scrollbar_mode: 'OFF'
            layout:
              type: flex
              flex_flow: COLUMN
            widgets:
              - label:
                  text: Page 2
                  text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                  id: rw_ref7
              - button:
                  on_press:
                    - lvgl.page.previous: {}
                  bg_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  bg_opa: COVER
                  border_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  border_width: 0
                  radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                  width: !lambda "return espcompose::memo_1.get();"
                  height: !lambda "return espcompose::thm_333e4663_sizes_md_height.get();"
                  pressed:
                    bg_color: !lambda "return
                      espcompose::thm_333e4663_colors_primary_bgPressed.get();"
                    bg_opa: COVER
                  id: rw_ref8
                  widgets:
                    - label:
                        text: Back
                        text_color: !lambda "return espcompose::thm_333e4663_colors_primary_text.get();"
                        text_align: CENTER
                        align: CENTER
                        id: rw_ref9
    - bg_color: !lambda "return espcompose::thm_333e4663_colors_background.get();"
      bg_opa: COVER
      border_width: 0
      scrollbar_mode: 'OFF'
      id: rw_ref10
      widgets:
        - obj:
            width: 100%
            height: SIZE_CONTENT
            bg_opa: TRANSP
            border_width: 0
            scrollbar_mode: 'OFF'
            layout:
              type: flex
              flex_flow: COLUMN
            widgets:
              - label:
                  text: Page 3
                  text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                  id: rw_ref11
              - button:
                  on_press:
                    - lvgl.page.show:
                        id: r_ref2
                  bg_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  bg_opa: COVER
                  border_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  border_width: 0
                  radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                  width: !lambda "return espcompose::memo_2.get();"
                  height: !lambda "return espcompose::thm_333e4663_sizes_md_height.get();"
                  pressed:
                    bg_color: !lambda "return
                      espcompose::thm_333e4663_colors_primary_bgPressed.get();"
                    bg_opa: COVER
                  id: rw_ref12
                  widgets:
                    - label:
                        text: Go
                        text_color: !lambda "return espcompose::thm_333e4663_colors_primary_text.get();"
                        text_align: CENTER
                        align: CENTER
                        id: rw_ref13
              - button:
                  on_press:
                    - lvgl.page.show:
                        id: r_ref2
                  bg_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  bg_opa: COVER
                  border_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  border_width: 0
                  radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                  width: !lambda "return espcompose::memo_3.get();"
                  height: !lambda "return espcompose::thm_333e4663_sizes_md_height.get();"
                  pressed:
                    bg_color: !lambda "return
                      espcompose::thm_333e4663_colors_primary_bgPressed.get();"
                    bg_opa: COVER
                  id: rw_ref14
                  widgets:
                    - label:
                        text: GoProps
                        text_color: !lambda "return espcompose::thm_333e4663_colors_primary_text.get();"
                        text_align: CENTER
                        align: CENTER
                        id: rw_ref15
external_components:
  - source:
      type: local
      path: ./external_components
    components:
      - espcompose
espcompose:
  flush_budget_us: 2000
font:
  - id: r_ref16
    file: gfonts://Roboto
    size: 28
    bpp: 4
  - id: r_ref17
    file: gfonts://Roboto
    size: 20
    bpp: 4
  - id: r_ref18
    file: gfonts://Roboto
    size: 16
    bpp: 4
  - id: r_ref19
    file: gfonts://Roboto
    size: 12
    bpp: 4
  - id: r_ref20
    file: gfonts://Roboto
    size: 14
    bpp: 4
  - id: r_ref21
    file: gfonts://Roboto
    size: 18
    bpp: 4
  - id: r_ref22
    file: gfonts://Roboto
    size: 22
    bpp: 4
"
`;

exports[`ESPHome Compose Build > reactive-device 1`] = `
"esphome:
  name: reactive-device
  comment: Local ref reactive binding demo
  includes:
    - espcompose_bindings.h
  platformio_options:
    build_flags:
      - -DESPCOMPOSE_MAX_NODES=20
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
sensor:
  id: r_ref0
  platform: internal_temperature
  name: ESP Temperature
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref1
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref2
  displays:
    - r_ref1
  pages:
    - widgets:
        - label:
            text: !lambda "return id(r_ref0).state;"
            x: 10
            y: 10
            id: rw_ref3
        - button:
            on_release:
              - homeassistant.action:
                  action: switch.toggle
                  data:
                    entity_id: switch.space_heater
            x: 10
            y: 50
            width: 120
            height: 50
            widgets:
              - label:
                  text: Heater
                  align: CENTER
        - slider:
            x: 10
            y: 120
            width: 200
            indicator:
              bg_opa: !lambda "return espcompose::memo_0.get().c_str();"
            id: rw_ref4
        - button:
            x: 10
            y: 160
            pressed:
              bg_opa: !lambda "return espcompose::memo_1.get().c_str();"
            id: rw_ref5
            widgets:
              - label:
                  text: Styled
                  align: CENTER
        - slider:
            x: 10
            y: 210
            width: 200
            indicator:
              pressed:
                bg_opa: !lambda "return espcompose::memo_2.get().c_str();"
            id: rw_ref6
binary_sensor:
  platform: homeassistant
  id: ha_switch_space_heater
  entity_id: switch.space_heater
  trigger_on_initial_state: true
  on_state:
    - lambda: !lambda "espcompose::sig_ha_switch_space_heater.set(x); if (auto rt =
        ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
        rt->request_flush(); }"
external_components:
  - source:
      type: local
      path: ./external_components
    components:
      - espcompose
espcompose:
  flush_budget_us: 2000
"
`;

exports[`ESPHome Compose Build > reactive-theme-device 1`] = `
"esphome:
  name: reactive-theme-device
  comment: Reactive theme switching E2E
  includes:
    - espcompose_bindings.h
  platformio_options:
    build_flags:
      - -DUSE_LVGL_FONT
      - -DESPCOMPOSE_MAX_NODES=60
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  data_rate: 40MHz
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - bg_color: !lambda "return espcompose::thm_333e4663_colors_background.get();"
      bg_opa: COVER
      border_width: 0
      pad_all: !lambda "return espcompose::thm_333e4663_spacing_lg.get();"
      scrollbar_mode: 'OFF'
      id: rw_ref2
      widgets:
        - obj:
            width: 100%
            height: SIZE_CONTENT
            bg_opa: TRANSP
            border_width: 0
            scrollbar_mode: 'OFF'
            layout:
              type: flex
              flex_flow: COLUMN
            widgets:
              - label:
                  text: Theme Test
                  text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                  id: rw_ref3
              - obj:
                  bg_color: !lambda "return espcompose::thm_333e4663_colors_surfaceAlt.get();"
                  bg_opa: COVER
                  pad_all: !lambda "return espcompose::thm_333e4663_spacing_md.get();"
                  radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                  border_width: 0
                  width: 100%
                  height: SIZE_CONTENT
                  scrollbar_mode: 'OFF'
                  layout:
                    type: flex
                    flex_flow: COLUMN
                  id: rw_ref4
                  widgets:
                    - label:
                        text: Controls
                        text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                        id: rw_ref5
                    - obj:
                        width: 100%
                        height: SIZE_CONTENT
                        bg_opa: TRANSP
                        border_width: 0
                        scrollbar_mode: 'OFF'
                        layout:
                          type: flex
                          flex_flow: COLUMN
                          pad_row: !lambda "return espcompose::thm_333e4663_spacing_xs.get();"
                        widgets:
                          - label:
                              text: Brightness
                              text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                              id: rw_ref6
                          - obj:
                              width: 100%
                              height: 27
                              pad_top: 4
                              pad_bottom: 4
                              pad_left: 11
                              pad_right: 9
                              widgets:
                                - slider:
                                    min_value: 0
                                    max_value: 255
                                    width: 100%
                                    height: 100%
                                    pad_left: 0
                                    radius: CIRCLE
                                    bg_opa: COVER
                                    bg_color: !lambda "return espcompose::thm_333e4663_parts_slider_rail.get();"
                                    border_width: 0
                                    indicator:
                                      border_width: 0
                                      radius: CIRCLE
                                      bg_opa: COVER
                                      bg_color: !lambda "return
                                        espcompose::thm_333e4663_parts_slider_indicator.get();"
                                    knob:
                                      pad_all: 4
                                      border_width: 2
                                      border_color: !lambda "return espcompose::thm_333e4663_parts_slider_rail.get();"
                                      radius: CIRCLE
                                      bg_opa: COVER
                                      bg_color: !lambda "return espcompose::thm_333e4663_parts_slider_knob.get();"
                                    id: rw_ref7
              - obj:
                  width: 100%
                  height: SIZE_CONTENT
                  bg_opa: TRANSP
                  border_width: 0
                  scrollbar_mode: 'OFF'
                  layout:
                    type: flex
                    flex_flow: ROW
                  widgets:
                    - button:
                        on_press:
                          - lambda: !lambda "espcompose::select_theme_333e4663(\\"dark\\");"
                        bg_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                        bg_opa: COVER
                        border_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                        border_width: 0
                        radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                        width: !lambda "return espcompose::memo_0.get();"
                        height: !lambda "return espcompose::thm_333e4663_sizes_md_height.get();"
                        pressed:
                          bg_color: !lambda "return
                            espcompose::thm_333e4663_colors_primary_bgPressed.get(\\
                            );"
                          bg_opa: COVER
                        id: rw_ref8
                        widgets:
                          - label:
                              text: Dark
                              text_color: !lambda "return espcompose::thm_333e4663_colors_primary_text.get();"
                              text_align: CENTER
                              align: CENTER
                              id: rw_ref9
                    - button:
                        on_press:
                          - lambda: !lambda "espcompose::select_theme_333e4663(\\"light\\");"
                        bg_color: !lambda "return espcompose::thm_333e4663_colors_secondary_bg.get();"
                        bg_opa: COVER
                        border_color: !lambda "return
                          espcompose::thm_333e4663_colors_secondary_bg.get();"
                        border_width: 0
                        radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                        width: !lambda "return espcompose::memo_1.get();"
                        height: !lambda "return espcompose::thm_333e4663_sizes_md_height.get();"
                        pressed:
                          bg_color: !lambda "return
                            espcompose::thm_333e4663_colors_secondary_bgPressed.ge\\
                            t();"
                          bg_opa: COVER
                        id: rw_ref10
                        widgets:
                          - label:
                              text: Light
                              text_color: !lambda "return
                                espcompose::thm_333e4663_colors_secondary_text.get()\\
                                ;"
                              text_align: CENTER
                              align: CENTER
                              id: rw_ref11
external_components:
  - source:
      type: local
      path: ./external_components
    components:
      - espcompose
espcompose:
  flush_budget_us: 2000
font:
  - id: r_ref12
    file: gfonts://Roboto
    size: 28
    bpp: 4
  - id: r_ref13
    file: gfonts://Roboto
    size: 20
    bpp: 4
  - id: r_ref14
    file: gfonts://Roboto
    size: 16
    bpp: 4
  - id: r_ref15
    file: gfonts://Roboto
    size: 12
    bpp: 4
  - id: r_ref16
    file: gfonts://Roboto
    size: 14
    bpp: 4
  - id: r_ref17
    file: gfonts://Roboto
    size: 18
    bpp: 4
  - id: r_ref18
    file: gfonts://Roboto
    size: 22
    bpp: 4
"
`;

exports[`ESPHome Compose Build > script-device 1`] = `
"esphome:
  name: script-device
  comment: Device using action tree authoring
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: INFO
binary_sensor:
  platform: gpio
  pin: 4
  name: Button
  on_press:
    - script.execute:
        id: greet
    - script.wait:
        id: greet
  on_release:
    - delay: 100ms
script:
  - id: greet
    then:
      - logger.log: Hello from ESPCompose!
      - delay: 500ms
"
`;

exports[`ESPHome Compose Build > secret-device 1`] = `
"esphome:
  name: secret-device
  comment: Device using secrets
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: !secret secret_0
  password: !secret secret_1
api:
  encryption:
    key: !secret secret_2
ota:
  platform: esphome
  password: !secret secret_3
logger:
  level: DEBUG
"
`;

exports[`ESPHome Compose Build > sensor-device 1`] = `
"esphome:
  name: sensor-device
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
sensor:
  platform: dht
  pin: 4
  model: DHT22
  temperature:
    name: Temperature
  humidity:
    name: Humidity
binary_sensor:
  platform: gpio
  pin: 5
  name: Motion Sensor
  device_class: motion
logger:
  level: INFO
"
`;

exports[`ESPHome Compose Build > style-device 1`] = `
"esphome:
  name: style-device
  comment: CSS-like style system E2E test
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  data_rate: 40MHz
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - widgets:
        - button:
            pad_left: 16
            pad_right: 16
            pad_top: 8
            pad_bottom: 8
            x: 10
            y: 10
            width: 200
            height: 50
            bg_color: "0x1E88E5"
            text_color: "0xFFFFFF"
            radius: 8
            pressed:
              bg_color: "0x1565C0"
            widgets:
              - label:
                  text: Styled Button
                  align: CENTER
        - button:
            x: 10
            y: 70
            width: 200
            height: 50
            bg_color: "0xFF0000"
            widgets:
              - label:
                  text: Styled Red
                  align: CENTER
        - obj:
            x: 10
            y: 130
            width: 200
            height: 80
            bg_color: "0x424242"
            pad_all: 8
            radius: 12
            widgets:
              - label:
                  text: Merged
                  align: CENTER
        - slider:
            value: 50
            min_value: 0
            max_value: 100
            x: 10
            y: 220
            width: 200
            bg_color: "0x555555"
            indicator:
              bg_color: "0x1E88E5"
            knob:
              bg_color: "0xFFFFFF"
              radius: 16
"
`;

exports[`ESPHome Compose Build > trigger-device 1`] = `
"esphome:
  name: trigger-device
  comment: Device demonstrating automation API
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
output:
  id: r_ref0
  platform: ledc
  pin: 19
  frequency: 1000Hz
light:
  id: r_ref1
  platform: monochromatic
  name: Desk Light
  output: r_ref0
switch:
  id: r_ref2
  platform: gpio
  pin: 5
  name: Relay
binary_sensor:
  platform: gpio
  pin: 4
  name: Button
  on_press:
    - script.execute:
        id: toggle_all
    - script.wait:
        id: toggle_all
  on_release:
    - light.turn_off: r_ref1
    - delay: 100ms
    - switch.turn_off: r_ref2
  on_double_click:
    - script.execute:
        id: dim_light
    - script.wait:
        id: dim_light
script:
  - id: toggle_all
    then:
      - light.toggle: r_ref1
      - delay: 200ms
      - switch.toggle: r_ref2
  - id: dim_light
    then:
      - light.turn_on:
          id: r_ref1
          brightness: 0.5
      - logger.log: Light dimmed to 50%
"
`;

exports[`ESPHome Compose Build > trigger-variable-device 1`] = `
"esphome:
  name: trigger-variable-device
  comment: Trigger variable and primitive slot tests
  includes:
    - espcompose_bindings.h
  platformio_options:
    build_flags:
      - -DESPCOMPOSE_MAX_NODES=23
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - widgets:
        - button:
            on_press:
              - homeassistant.action:
                  action: homeassistant.toggle
                  data:
                    entity_id: light.office
            widgets:
              - label:
                  text: !lambda "return espcompose::memo_0.get().c_str();"
                  id: rw_ref2
        - button:
            on_press:
              - homeassistant.action:
                  action: homeassistant.toggle
                  data:
                    entity_id: light.office
            widgets:
              - label:
                  text: Direct
        - button:
            on_press:
              - homeassistant.action:
                  action: homeassistant.toggle
                  data:
                    entity_id: light.office
            widgets:
              - label:
                  text: Conditional
        - label:
            text: !lambda "return espcompose::memo_1.get().c_str();"
            id: rw_ref3
binary_sensor:
  platform: homeassistant
  id: ha_light_office
  entity_id: light.office
  trigger_on_initial_state: true
  on_state:
    - lambda: !lambda "espcompose::sig_ha_light_office.set(x); if (auto rt =
        ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
        rt->request_flush(); }"
sensor:
  platform: homeassistant
  id: ha_light_office_brightness
  entity_id: light.office
  attribute: brightness
  on_value:
    - lambda: !lambda "espcompose::sig_ha_light_office_brightness.set(x); if (auto rt
        = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
        rt->request_flush(); }"
text_sensor:
  platform: homeassistant
  id: ha_light_office_state_text
  entity_id: light.office
  on_value:
    - lambda: !lambda "espcompose::sig_ha_light_office_state_text.set(x); if (auto rt
        = ::espcompose::EspcomposeRuntimeComponent::get_instance()) {
        rt->request_flush(); }"
external_components:
  - source:
      type: local
      path: ./external_components
    components:
      - espcompose
espcompose:
  flush_budget_us: 2000
"
`;

exports[`ESPHome Compose Build > use-lvgl-hook-device 1`] = `
"esphome:
  name: use-lvgl-hook-device
  comment: useLvgl() hook test
  includes:
    - espcompose_bindings.h
  platformio_options:
    build_flags:
      - -DUSE_LVGL_FONT
      - -DESPCOMPOSE_MAX_NODES=38
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: TestWifi
  password: testpass
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - id: r_ref2
      bg_color: !lambda "return espcompose::thm_333e4663_colors_background.get();"
      bg_opa: COVER
      border_width: 0
      scrollbar_mode: 'OFF'
      widgets:
        - obj:
            width: 100%
            height: SIZE_CONTENT
            bg_opa: TRANSP
            border_width: 0
            scrollbar_mode: 'OFF'
            layout:
              type: flex
              flex_flow: COLUMN
            widgets:
              - label:
                  text: Page 1
                  text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                  id: rw_ref3
              - button:
                  on_press:
                    - lvgl.page.next: {}
                  bg_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  bg_opa: COVER
                  border_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  border_width: 0
                  radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                  width: !lambda "return espcompose::memo_0.get();"
                  height: !lambda "return espcompose::thm_333e4663_sizes_md_height.get();"
                  pressed:
                    bg_color: !lambda "return
                      espcompose::thm_333e4663_colors_primary_bgPressed.get();"
                    bg_opa: COVER
                  id: rw_ref4
                  widgets:
                    - label:
                        text: Next
                        text_color: !lambda "return espcompose::thm_333e4663_colors_primary_text.get();"
                        text_align: CENTER
                        align: CENTER
                        id: rw_ref5
    - bg_color: !lambda "return espcompose::thm_333e4663_colors_background.get();"
      bg_opa: COVER
      border_width: 0
      scrollbar_mode: 'OFF'
      id: rw_ref6
      widgets:
        - obj:
            width: 100%
            height: SIZE_CONTENT
            bg_opa: TRANSP
            border_width: 0
            scrollbar_mode: 'OFF'
            layout:
              type: flex
              flex_flow: COLUMN
            widgets:
              - label:
                  text: Page 2
                  text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                  id: rw_ref7
              - button:
                  on_press:
                    - lvgl.page.previous: {}
                  bg_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  bg_opa: COVER
                  border_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  border_width: 0
                  radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                  width: !lambda "return espcompose::memo_1.get();"
                  height: !lambda "return espcompose::thm_333e4663_sizes_md_height.get();"
                  pressed:
                    bg_color: !lambda "return
                      espcompose::thm_333e4663_colors_primary_bgPressed.get();"
                    bg_opa: COVER
                  id: rw_ref8
                  widgets:
                    - label:
                        text: Back
                        text_color: !lambda "return espcompose::thm_333e4663_colors_primary_text.get();"
                        text_align: CENTER
                        align: CENTER
                        id: rw_ref9
    - bg_color: !lambda "return espcompose::thm_333e4663_colors_background.get();"
      bg_opa: COVER
      border_width: 0
      scrollbar_mode: 'OFF'
      id: rw_ref10
      widgets:
        - obj:
            width: 100%
            height: SIZE_CONTENT
            bg_opa: TRANSP
            border_width: 0
            scrollbar_mode: 'OFF'
            layout:
              type: flex
              flex_flow: COLUMN
            widgets:
              - label:
                  text: Page 3
                  text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                  id: rw_ref11
              - button:
                  on_press:
                    - lvgl.page.show:
                        id: r_ref2
                  bg_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  bg_opa: COVER
                  border_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  border_width: 0
                  radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                  width: !lambda "return espcompose::memo_2.get();"
                  height: !lambda "return espcompose::thm_333e4663_sizes_md_height.get();"
                  pressed:
                    bg_color: !lambda "return
                      espcompose::thm_333e4663_colors_primary_bgPressed.get();"
                    bg_opa: COVER
                  id: rw_ref12
                  widgets:
                    - label:
                        text: Go
                        text_color: !lambda "return espcompose::thm_333e4663_colors_primary_text.get();"
                        text_align: CENTER
                        align: CENTER
                        id: rw_ref13
external_components:
  - source:
      type: local
      path: ./external_components
    components:
      - espcompose
espcompose:
  flush_budget_us: 2000
font:
  - id: r_ref14
    file: gfonts://Roboto
    size: 28
    bpp: 4
  - id: r_ref15
    file: gfonts://Roboto
    size: 20
    bpp: 4
  - id: r_ref16
    file: gfonts://Roboto
    size: 16
    bpp: 4
  - id: r_ref17
    file: gfonts://Roboto
    size: 12
    bpp: 4
  - id: r_ref18
    file: gfonts://Roboto
    size: 14
    bpp: 4
  - id: r_ref19
    file: gfonts://Roboto
    size: 18
    bpp: 4
  - id: r_ref20
    file: gfonts://Roboto
    size: 22
    bpp: 4
"
`;

exports[`ESPHome Compose Build > widget-ref-device 1`] = `
"esphome:
  name: widget-ref-device
  comment: Widget ref forwarding test
  includes:
    - espcompose_bindings.h
  platformio_options:
    build_flags:
      - -DUSE_LVGL_FONT
      - -DESPCOMPOSE_MAX_NODES=40
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: TestWifi
  password: testpass
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  id: r_ref1
  displays:
    - r_ref0
  pages:
    - id: r_ref2
      bg_color: !lambda "return espcompose::thm_333e4663_colors_background.get();"
      bg_opa: COVER
      border_width: 0
      pad_all: !lambda "return espcompose::thm_333e4663_spacing_md.get();"
      scrollbar_mode: 'OFF'
      widgets:
        - obj:
            width: 100%
            height: SIZE_CONTENT
            bg_opa: TRANSP
            border_width: 0
            scrollbar_mode: 'OFF'
            layout:
              type: flex
              flex_flow: COLUMN
            widgets:
              - label:
                  text: Ref Forwarding
                  text_color: !lambda "return espcompose::thm_333e4663_colors_textPrimary.get();"
                  id: rw_ref3
              - button:
                  on_press:
                    - lvgl.page.next: {}
                  bg_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  bg_opa: COVER
                  border_color: !lambda "return espcompose::thm_333e4663_colors_primary_bg.get();"
                  border_width: 0
                  radius: !lambda "return espcompose::thm_333e4663_radii_md.get();"
                  width: !lambda "return espcompose::memo_0.get();"
                  height: !lambda "return espcompose::thm_333e4663_sizes_md_height.get();"
                  pressed:
                    bg_color: !lambda "return
                      espcompose::thm_333e4663_colors_primary_bgPressed.get();"
                    bg_opa: COVER
                  id: rw_ref4
                  widgets:
                    - label:
                        text: Next
                        text_color: !lambda "return espcompose::thm_333e4663_colors_primary_text.get();"
                        text_align: CENTER
                        align: CENTER
                        id: rw_ref5
external_components:
  - source:
      type: local
      path: ./external_components
    components:
      - espcompose
espcompose:
  flush_budget_us: 2000
font:
  - id: r_ref6
    file: gfonts://Roboto
    size: 28
    bpp: 4
  - id: r_ref7
    file: gfonts://Roboto
    size: 20
    bpp: 4
  - id: r_ref8
    file: gfonts://Roboto
    size: 16
    bpp: 4
  - id: r_ref9
    file: gfonts://Roboto
    size: 12
    bpp: 4
  - id: r_ref10
    file: gfonts://Roboto
    size: 14
    bpp: 4
  - id: r_ref11
    file: gfonts://Roboto
    size: 18
    bpp: 4
  - id: r_ref12
    file: gfonts://Roboto
    size: 22
    bpp: 4
"
`;
